# atlas-tdd-august-2024

./: README.md
LaborProject/: CMakeLists.txt
LaborProject/source/: MyServiceUsingDependency.h  main.cpp
LaborProject/tests/: CMakeLists.txt  MockDependency.h  MyServiceUsingDepenencyTest.cpp  MyServiceUsingDepenencyTest.h
ParameterTestProjekt/tests/: CMakeLists.txt
PersonenServiceProjekt/: CMakeLists.txt
PersonenServiceProjekt/source/services/: blacklist_service.h  personen_service.h  personen_service_impl.h
PersonenServiceProjekt/tests/: CMakeLists.txt
PersonenServiceProjekt/tests/services/: personen_service_impl_test.cpp  personen_service_impl_test.h
QT6EuroToDollarCalculator/source/presenter/: euro_to_dollar_presenter_impl.h
QT6EuroToDollarCalculator/tests/services/: euro_to_dollar_impl_test.cpp
Tag1_01StapelProjekt/: CMakeLists.txt
Tag1_01StapelProjekt/source/collections/: Stapel.cpp  Stapel.h  StapelException.h
Tag1_01StapelProjekt/tests/: CMakeLists.txt  test.cpp
Tag1_01StapelProjekt/tests/collections/: StapelTest.cpp  StapelTest.h
Tag1_01StapelProjektTTDVariante/: CMakeLists.txt
Tag1_02SchweineProjekt/: CMakeLists.txt
Tag1_02SchweineProjekt/source/: main.cpp
Tag1_02SchweineProjekt/source/services/: MultImpl.h  MyServiceUsingDependency.h
Tag1_02SchweineProjekt/source/tiere/: Schwein.h
Tag1_02SchweineProjekt/tests/: CMakeLists.txt
Tag1_02SchweineProjekt/tests/services/: MyServiceUsingDependencyTest.cpp  MyServiceUsingDependencyTest.h
Tag1_02SchweineProjekt/tests/tiere/: SchweinTest.cpp
(+4 files in other folders)
